<resources>
    <string name="app_name">first_project</string>
    <string name="asdf">some</string>
    <string name="wahab_ali">Wahab Ali</string>
    <string name="gr">GR</string>
    <string name="clas">Class</string>
    <string name="section">Section</string>
    <string name="name">Student Name :</string>
    <string name="father_name">Father Name :</string>
    <string name="year">Year :</string>
    <string name="grade">Grade :</string>
    <string name="sectiont">Section :</string>
    <string name="grt">GR :</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_ti">Attendance</string>
    <string name="month">Month</string>
    <string name="listing_demo">Listing Demo</string>
    <string name="listing_demo_button">Listing Demo</string>
    <string name="interceptor_demo">Interceptor Demo</string>
    <string name="timeout_demo">Timeout Demo</string>
    <string name="back_to_screen_1">Back to screen 1</string>
    <string name="title">Select Designation</string>


    <string-array name="design">
        <item>Student</item>

        <item>Employee</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
